assets/css/stylesheet.css
/* ... */
.intro {
    height: 100vh;
    margin: 0 auto ;
    padding-top: 6em;
    width: 80%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.intro {
    width: 100%;
    height: 80%;
  }


.main-logo {
    width: 60em;
}

.info {
    font-size: 2rem;
    padding: 0.2em;
}

.button {
    transition: all 0.3s ease-in-out;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); /* 10 */
    padding-block: 0.5rem;
    padding-inline: 1.25rem;
    background-color: #fc8a68;
    border-radius: 9999px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #ffff;
    gap: 0.4em;
    font-weight: bold;
    border: 3px solid #ffffff4d;
    outline: none;
    overflow: hidden;
    font-size: 2rem;
    cursor: pointer;
  }
  
  .icon {
    width: 0.9em;
    height: 0.9em;
    transition: all 0.3s ease-in-out;
  }
  
  .button:hover {
    transform: scale(1.05);
    border-color: #fff9;
    z-index: 1000;
  }
  
  .button:hover .icon {
    transform: translate(4px);
  }
  
  .button:hover::before {
    animation: shine 1.5s ease-out infinite;
  }
  
  .button::before {
    content: "";
    position: absolute;
    width: 100px;
    height: 100%;
    background-image: linear-gradient(
      120deg,
      rgba(255, 255, 255, 0) 30%,
      rgba(255, 255, 255, 0.8),
      rgba(255, 255, 255, 0) 70%
    );
    top: 0;
    left: -100px;
    opacity: 0.6;
  }
  
  @keyframes shine {
    0% {
      left: -100px;
    }
  
    60% {
      left: 100%;
    }
  
    to {
      left: 100%;
    }
  }  


@media (max-width: 1300px) {
    .main-logo {
        width: 50em;
    }

    .info, .button {
        font-size: 1.7rem;
    }
}

@media (max-width: 992px) {
    .main-logo {
        width: 40em;
    }

    .info, .button {
        font-size: 1.5rem;
    }

}

@media (max-width: 720px) {
    .main-logo {
        width: 25em;
    }

    .info, .button {
        font-size: 1.2rem;
    }
}

@media (max-width: 400px) {
    .main-logo {
        width: 20em;
    }

    .info, .button {
        font-size: 1rem;
    }
}

.star {
    translate: none; 
    rotate: none; 
    scale: none; 
    transform: translate3d(0px, 0px, 0px) rotate(0.2812deg);
}

.gear {
    height: 5em;
    position: absolute;
    opacity: 0.7;
}

#gear1 {
    left: 22%;
    top: 32%;
}

#gear2 {
    left: 72%;
    top: 23%;
}

#computer-asset {
    width: 25em;
    position: absolute;
    top: 27%;
    left: 55%;
    opacity: 0.75;
}

/* About */

#about {
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    padding-top: 6em;
    max-width: 60%;
    border-radius: 5px;
    margin-bottom: 10em;
}

.container {
    display: flex;
    flex-direction: column;
    max-width: 60%;
    border: 2px solid #fff;
    --shadow-color: hsl(220deg 100% 55%);
    filter: drop-shadow(
      1px 2px 8px var(--shadow-color)
    );
    border-radius: 5px;
}

.container-top {
    border-bottom: solid 2px #fff;
    padding: 0.8em;
    font-size: 1.8rem;
    font-weight: 600;
    color: rgb(240, 234, 234);
    background-color: rgba(107, 138, 252, 255);
}

.container-content {
    background-color: rgba(38, 44, 80, 255);
    color: rgb(209, 208, 208);
    padding: 0.8em;
    font-size: 1.2rem;
    line-height: 2rem;
    flex-grow: 1;
}

.container-content img {
    width: 100%;
}

.about-info {
    margin-bottom: 6em;
}

.about-pic {
  min-width: 100%;
}

@media (max-width: 1920px) {
  .about-info, .about-pic {
    min-width: 25em;
  }
}

@media (max-width: 1350px) {
  #about {
    flex-direction: column;
  }

  .about-info, .about-pic {
    min-width: 100%;
  }

}

@media (max-width: 992px) {
    #about {
      max-width: 70%;
      flex-direction: column;
    }

    .about-info, .about-pic {
      min-width: 100%;
    }

    .container {
        max-width: 80%;
    }

    .navbar .toggle_btn {
        display: block;
    }

    .logo img{
        width: 4em;
    }

    .container-top {
        font-size: 1.6rem;
    }

    .container-content {
        font-size: 1.1rem;
    }

    #gear1 {
        left: 12%;
        top: 32%;
    }

    #gear2 {
        left: 78%;
        top: 25%;
    }

    .gear {
        height: 4em;
    }

    #computer-asset {
        width: 18em;
        top: 27%;
        left: 55%;
    }
}

@media (max-width: 720px) {
    #about {
      max-width: 80%;
    }
  
    .container {
        max-width: 100%;
    }
    #gear1 {
        left: 12%;
        top: 22%;
    }

    #gear2 {
        left: 72%;
        top: 17%;
    }
    .gear {
        height: 3em;
    }

    #computer-asset {
        width: 12em;
        top: 21%;
        left: 50%;
    }
}

@media (max-width: 385px) {
    #computer-asset {
        width: 10em;
        top: 18%;
        left: 45%;
    }

    #gear1 {
        left: 12%;
        top: 20%;
    }

    #gear2 {
        left: 72%;
        top: 16%;
    }

    .gear {
        height: 2.5em;
    }
}

/* stuff
*/

.stuff {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* background-color: #0c0c3b; */
    background-image: linear-gradient(#0c0c3b, #2c0c3b);
    z-index: 1;
}

.accordion-title {
    
    font-weight: 600;
    font-size: 2rem;
    padding-bottom: 2em;
    width: 60%;
}

.dummy {
    opacity: 0;
}

/* Accordion */
#faq {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    padding-bottom: 5em;
}

.cols {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
}

.accordion__label {
    padding: 1em 1.2em;
    font-size: 1.1rem;
}

#faq p {
    margin: 0;
}

.accordion__content {
    padding: 0em 1.2em;
    padding-bottom: 1em;
}

.accordion__label {
    display: block;
    color: rgb(240, 234, 234);
    font-weight: 800;
    cursor: pointer;
    position: relative;
    transition: background 0.1s;
}
/* ... */

